fix overflow

--- a/scss/style.css
+++ b/scss/style.css
@@ -6,7 +6,6 @@ html, body {
   margin: 0;
   font-size: 13px;
   font-family: sans-serif;
-  overflow: hidden;
 }
 
 #messageHeader {
